[package]
name = "dhcp_experiment"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp_hal = { package = "esp-hal", features = ["esp32c3"], version = "0.21.0" }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
esp-alloc = { version = "0.5.0" }

esp-wifi = { version = "0.10.1", features = [
    "dump-packets",
    "esp32c3",
    "wifi",
    "wifi-default",
    "utils",
    "log",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "log",
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
log = "0.4.22"
embedded-io = "0.6.1"

no-std-net = "0.6"
heapless = "0.8.0"

dhcp = { path = "../dhcp" }

domain = { version = "0.7", default-features = false }
